test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_specification_underflow_value.sol
contract A layout at 0 - 1 {}
contract B layout at 2**8 - 2**16 {}
// ----
// UnimplementedFeatureError 1834: (0-29): Code generation is not supported for contracts with specified storage layout base.
